--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,11 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.1"
+    buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "baishuai.github.io.keddit"
         minSdkVersion 16
@@ -35,6 +36,11 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
+    compile 'com.jakewharton.timber:timber:4.4.0'
+    compile 'nz.bradcampbell:paperparcel:2.0.0-beta2'
+    compile 'nz.bradcampbell:paperparcel-kotlin:2.0.0-beta2'
+    kapt 'nz.bradcampbell:paperparcel-compiler:2.0.0-beta2'
+
     // RxJava & RxAndroid
     compile 'io.reactivex.rxjava2:rxjava:2.0.3'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
@@ -43,13 +49,19 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-moshi:2.1.0'
 
+
     // Dagger
     compile 'com.google.dagger:dagger:2.8'
     kapt 'com.google.dagger:dagger-compiler:2.8'
     provided 'org.glassfish:javax.annotation:10.0-b28'
 
-    compile 'com.jakewharton.timber:timber:4.4.0'
+    // Test
     testCompile 'junit:junit:4.12'
+    testCompile 'com.nhaarman:mockito-kotlin:0.7.0'
+    testCompile 'org.jetbrains.spek:spek:1.0.25'
+    testCompile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -57,4 +69,8 @@ dependencies {
 
 repositories {
     mavenCentral()
+
+    maven {
+        url "http://repository.jetbrains.com/all"
+    }
 }
